# QSlang

./: .gitignore  .gitmodules  .travis.yml  Makefile  Pipfile  README.md  config.example.toml  config.toml.example  dose.py  event.py  igroupby.py  load.py  load_evernote.py  main.py  parse.py  pyproject.toml  setup.py  test-integration.sh  util.py
.github/workflows/: build.yml
data/test/: testnote.enex
data/test/notes/: 2022-08-10.md
qslang/: __about__.py  __init__.py  __main__.py  avg_times.py  config.py  dose.py  event.py  filter.py  igroupby.py  load.py  main.py  parse.py  parsimonious.py  pharmacokinetics.py  preprocess.py  util.py
tests/: test_dose.py  test_parse.py  test_util.py
