[tool.poetry]
name = "qslang"
version = "0.1.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"
packages = [
    { include = "qslang" }
]

[tool.poetry.scripts]
qslang = "qslang:__main__"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "*"
matplotlib = "*"
pandas = "*"
pint = "*"
toml = "*"
click = "*"
calplot = "^0.1"  # fork of calmap
aw-core = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"
flake8 = "*"
black = "*"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=qslang --cov-report=xml --cov-report=html --cov-report=term" # --profile --cov-report=term
testpaths = [
    "qslang",
    "tests",
]
python_files = ["*.py",]
filterwarnings = ["ignore::DeprecationWarning",]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
