[tool.poetry]
name = "qslang"
version = "0.1.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"
packages = [
    { include = "qslang" }
]

[tool.poetry.scripts]
qslang = "qslang.main:main"

[tool.poetry.dependencies]
python = "^3.9"
aw-core = "*"

numpy = "*"
matplotlib = "*"
pandas = "*"
calplot = "^0.1"  # fork of calmap

click = "*"
pint = "*"
toml = "*"

regex = "^2022.6.2"
parsimonious = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-ordering = "*"
mypy = "*"
flake8 = "*"
black = "*"
types-toml = "^0.10.8"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=qslang --cov-report=xml --cov-report=html --cov-report=term" # --profile --cov-report=term
testpaths = [
    "qslang",
    "tests",
]
python_files = ["*.py",]
filterwarnings = ["ignore::DeprecationWarning",]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
